--- a/post3/website/templates/submit-basic.html
+++ b/post3/website/templates/submit-basic.html
@@ -19,7 +19,7 @@
 
   {% if error %}
     <br>
-    Oh no, we couldn't use that file! 
+    Oh no, we couldn't read that! 
   {% endif %}
 
 {% endblock %}
