--- a/post3/website/templates/base.html
+++ b/post3/website/templates/base.html
@@ -6,7 +6,7 @@
   <!-- <b>Navigation:</b> -->
   <ul>
     <li><a href="{{ url_for('submit_basic') }}">Submit a message</a></li>
-    <li><a href="{{ url_for('submit') }}">View messages</a></li>
+    <li><a href="{{ url_for('view') }}">View messages</a></li>
   </ul>
 </nav>
 <section class="content">
