--- a/post3/website/static/style.css
+++ b/post3/website/static/style.css
@@ -1,6 +1,6 @@
 html {
     font-family: sans-serif;
-    background: AntiqueWhite;
+    background: rgb(255, 255, 255);
     padding: 1rem;
 }
 
@@ -10,7 +10,7 @@ body {
 }
 
 h1 {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 153, 0);
     font-family: sans-serif;
     margin: 1rem 0;
     text-align: center;
@@ -27,12 +27,13 @@ hr {
 }
 
 nav {
-    background: AntiqueWhite;
+    background: rgb(0, 0, 0);
     padding: 0 0.5rem;
     border-radius: 25px;
 }
 
 nav ul  {
+    color: rgb(255, 153, 0);
     display: flex;
     list-style: none;
     margin: 0;
@@ -40,13 +41,14 @@ nav ul  {
 }
 
 nav ul li a {
+    color: rgb(255, 153, 0);
     display: block;
     padding: 0.5rem;
 }
 
 .content {
     padding: 0 1rem 1rem;
-    background: white;
+    background: rgb(0, 0, 0);
     border-radius: 25px;
 }
 
@@ -56,4 +58,8 @@ nav ul li a {
     padding: 1em;
     background: #cae6f6;
     border: 1px solid #377ba8;
+}
+.cr{
+    color: rgb(255, 153, 0);
+    background: #cae6f6;
 }
