--- a/post3/website/templates/submit-basic.html
+++ b/post3/website/templates/submit-basic.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-  <form method="post" enctype="multipart/form-data">
+  <form method="post" enctype="multipart/form-data" class="cr">
     <label for="message">Your message</label><br>
     <input type="text" name="message" id="message"><br>
     <label for="name">Your name or handle: </label><br>
