--- a/post3/website/templates/submit-basic.html
+++ b/post3/website/templates/submit-basic.html
@@ -14,7 +14,7 @@
   </form>
   {% if thanks %}
     <br>
-    Thanks for submitting
+    <div class="cr">Thanks for submitting</div>
   {% endif %}
 
   {% if error %}
