--- a/post3/website/templates/base.html
+++ b/post3/website/templates/base.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <title>{% block title %}{% endblock %} - Blog Post 3</title>
 <nav>
-  <h1>A simple Message Bank</h1>
+  <img src="/static/logo.png" style="margin: 0 auto;">
   <!-- <b>Navigation:</b> -->
   <ul>
     <li><a href="{{ url_for('submit_basic') }}">Submit a message</a></li>
